--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -11,7 +11,30 @@
 {% block importmap %}{{ importmap('app') }}{% endblock %}
         {% endblock %}
     </head>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="#">Your Website</a>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav ml-auto">
+            {% if is_granted('IS_AUTHENTICATED_FULLY') %}
+                <li class="nav-item">
+                    <span class="nav-link">Logged in as {{ app.user.userIdentifier }}</span>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ path('app_logout') }}">Log out</a>
+                </li>
+            {% else %}
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ path('app_login') }}">Log in</a>
+                </li>
+            {% endif %}
+        </ul>
+    </div>
+</nav>
+
     <body>
         {% block body %}{% endblock %}
     </body>
+
+{% block addJavascripts %}{% endblock %}
 </html>
