--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -25,6 +25,9 @@
                 </li>
             {% else %}
                 <li class="nav-item">
+                    <a class="nav-link" href="{{ path('app_register') }}">register</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="{{ path('app_login') }}">Log in</a>
                 </li>
             {% endif %}
