Affichage HomePage et AboutUs

--- a/templates/info/about.html.twig
+++ b/templates/info/about.html.twig
@@ -24,8 +24,8 @@ About Area
             <div class="row justify-content-center">
                 <div class="col-lg-7 col-md-8">
                     <div class="title-area text-center">
-                        <span class="sub-title"><img src="assets/img/theme-img/title_icon.svg" alt="shape">About Our Company</span>
-                        <h2 class="sec-title">Taking Care of Your Health is Our Top Priority</h2>
+                        <span class="sub-title"><img src="assets/img/theme-img/title_icon.svg" alt="shape">A propos de notre société</span>
+                        <h2 class="sec-title">Prendre soin de votre santé est notre priorité absolue</h2>
                     </div>
                 </div>
             </div>
@@ -48,20 +48,20 @@ About Area
                 <div class="col-xl-6">
                     <div class="ps-xxl-4 ms-xl-2 text-center text-xl-start">
                         <div class="title-area mb-32">
-                            <p class="sec-text mt-n2">A brief statement outlining the purpose and mission of the clinic. This can include the commitment to patient care, community health, and any specifical goals for our values.</p>
+                            <p class="sec-text mt-n2">La solution digitale tout-en-un pour simplifier la gestion de votre cabinet médical et améliorer la satisfaction de vos patients.</p>
                         </div>
                         <div class="mb-25 mt-n1">
                             <div class="checklist style2 list-two-column">
                                 <ul>
-                                    <li><i class="fas fa-heart-pulse"></i> Medical Professionals</li>
-                                    <li><i class="fas fa-heart-pulse"></i> Facilities and Equipment</li>
-                                    <li><i class="fas fa-heart-pulse"></i> Emergency Care</li>
-                                    <li><i class="fas fa-heart-pulse"></i> Medical Consulting</li>
+                                    <li><i class="fas fa-heart-pulse"></i> Professionnels de la santé</li>
+                                    <li><i class="fas fa-heart-pulse"></i> Installations et équipements</li>
+                                    <li><i class="fas fa-heart-pulse"></i> Soin d'urgence</li>
+                                    <li><i class="fas fa-heart-pulse"></i> Consultation médicale</li>
                                 </ul>
                             </div>
                         </div>
                         <div>
-                            <a href="about.html" class="th-btn">More About Us</a>
+                            <a href="about.html" class="th-btn">De Plus</a>
                         </div>
                         <div class="about-video-wrap">
                             <div class="th-video about-video">
