--- a/templates/info/homePage.html.twig
+++ b/templates/info/homePage.html.twig
@@ -7,15 +7,15 @@ Hero Area
         <div class="hero-inner">
             <div class="container">
                 <div class="hero-style2">
-                    <span class="sub-title"><img src="assets/img/theme-img/title_icon.svg" alt="shape">24/7 Emergency Service</span>
+                    <span class="sub-title"><img src="assets/img/theme-img/title_icon.svg" alt="shape">24/7 Service d'urgence</span>
                     <h1 class="hero-title2">
-                        <span class="title1">Caring for <span class="line-text">Health</span></span>
-                        <span class="title2">Caring for You</span>
+                        <span class="title1">Prendre soin de la  <span class="line-text">Santé</span></span>
+                        <span class="title2">Prendre soin de Vous</span>
                     </h1>
-                    <p class="hero-text">A brief statement outlining the purpose and mission of the clinic. This can include the commitment to patient care, community health.</p>
+                    <p class="hero-text">Votre santé, à portée de clic.</p>
                     <div class="btn-group justify-content-center">
-                        <a href="about.html" class="th-btn">Discover More</a>
-                        <a href="service.html" class="th-btn style4">See All Services</a>
+                        <a href="about.html" class="th-btn">Découvrir de plus</a>
+                        <a href="service.html" class="th-btn style4">Voir tout les services</a>
                     </div>
                 </div>
             </div>
@@ -66,24 +66,24 @@ About Area
                 <div class="col-xl-6">
                     <div class="ps-xxl-4 ms-xl-2 text-center text-xl-start">
                         <div class="title-area mb-32">
-                            <span class="sub-title"><img src="assets/img/theme-img/title_icon.svg" alt="shape">About Us Company</span>
-                            <h2 class="sec-title">Affordable Health Care Solutions</h2>
-                            <p class="sec-text">A brief statement outlining the purpose and mission of the clinic. This can include the commitment to patient care, community health, and any specifical goals for our values.</p>
+                            <span class="sub-title"><img src="assets/img/theme-img/title_icon.svg" alt="shape">A propos de nous</span>
+                            <h2 class="sec-title">Solutions de soins de santé abordables</h2>
+                            <p class="sec-text"> Mediax est une plateforme de prise de rendez-vous médicaux en ligne qui révolutionne la gestion des cabinets médicaux et facilite la vie des patients..</p>
                         </div>
                         <div class="mb-30 mt-n1">
                             <div class="checklist style2 list-two-column">
                                 <ul>
-                                    <li><i class="fas fa-heart-pulse"></i> Medical Professionals</li>
-                                    <li><i class="fas fa-heart-pulse"></i> Facilities and Equipment</li>
-                                    <li><i class="fas fa-heart-pulse"></i> Emergency Care</li>
-                                    <li><i class="fas fa-heart-pulse"></i> Medical Consulting</li>
-                                    <li><i class="fas fa-heart-pulse"></i> Services Offered</li>
-                                    <li><i class="fas fa-heart-pulse"></i> Specializations</li>
+                                    <li><i class="fas fa-heart-pulse"></i> Professionnels de la santé</li>
+                                    <li><i class="fas fa-heart-pulse"></i> Installations et équipements</li>
+                                    <li><i class="fas fa-heart-pulse"></i> Soin d'urgence</li>
+                                    <li><i class="fas fa-heart-pulse"></i> Consultation médicale</li>
+                                    <li><i class="fas fa-heart-pulse"></i> Services offerts</li>
+                                    <li><i class="fas fa-heart-pulse"></i> Spécialisations</li>
                                 </ul>
                             </div>
                         </div>
                         <div>
-                            <a href="about.html" class="th-btn">More About Us</a>
+                            <a href="about.html" class="th-btn">De Plus</a>
                         </div>
                     </div>
                 </div>
@@ -98,8 +98,8 @@ Service Area
             <div class="row justify-content-center">
                 <div class="col-lg-6 col-md-8">
                     <div class="title-area text-center">
-                        <span class="sub-title"><img src="assets/img/theme-img/title_icon.svg" alt="Icon">Our Services</span>
-                        <h2 class="sec-title">Our Mediax specialties Technical service</h2>
+                        <span class="sub-title"><img src="assets/img/theme-img/title_icon.svg" alt="Icon">Nos Services</span>
+                        <h2 class="sec-title">Notre service technique Spécialités Mediax</h2>
                     </div>
                 </div>
             </div>
@@ -112,9 +112,9 @@ Service Area
                         <div class="box-icon">
                             <img src="assets/img/icon/service_card_1.svg" alt="Icon">
                         </div>
-                        <h3 class="box-title"><a href="service-details.html">Internal Medicine</a></h3>
+                        <h3 class="box-title"><a href="service-details.html">Médecine interne</a></h3>
                         <p class="box-text">30+ Doctors</p>
-                        <a href="service-details.html" class="th-btn btn-sm style2 theme-color">Read More</a>
+                        <a href="service-details.html" class="th-btn btn-sm style2 theme-color">Lire Plus</a>
                     </div>
                 </div>
                 <div class="col-xl-3 col-lg-4 col-sm-6">
@@ -125,9 +125,9 @@ Service Area
                         <div class="box-icon">
                             <img src="assets/img/icon/service_card_2.svg" alt="Icon">
                         </div>
-                        <h3 class="box-title"><a href="service-details.html">Dental Care</a></h3>
+                        <h3 class="box-title"><a href="service-details.html">Soins dentaires</a></h3>
                         <p class="box-text">20+ Doctors</p>
-                        <a href="service-details.html" class="th-btn btn-sm style2 theme-color">Read More</a>
+                        <a href="service-details.html" class="th-btn btn-sm style2 theme-color">Lire Plus</a>
                     </div>
                 </div>
                 <div class="col-xl-3 col-lg-4 col-sm-6">
@@ -138,9 +138,9 @@ Service Area
                         <div class="box-icon">
                             <img src="assets/img/icon/service_card_3.svg" alt="Icon">
                         </div>
-                        <h3 class="box-title"><a href="service-details.html">Urology Care</a></h3>
+                        <h3 class="box-title"><a href="service-details.html">Soins d'urologie</a></h3>
                         <p class="box-text">20+ Doctors</p>
-                        <a href="service-details.html" class="th-btn btn-sm style2 theme-color">Read More</a>
+                        <a href="service-details.html" class="th-btn btn-sm style2 theme-color">Lire Plus</a>
                     </div>
                 </div>
                 <div class="col-xl-3 col-lg-4 col-sm-6">
@@ -151,9 +151,9 @@ Service Area
                         <div class="box-icon">
                             <img src="assets/img/icon/service_card_4.svg" alt="Icon">
                         </div>
-                        <h3 class="box-title"><a href="service-details.html">Neurology Care</a></h3>
+                        <h3 class="box-title"><a href="service-details.html">Soins de neurologie</a></h3>
                         <p class="box-text">10+ Doctors</p>
-                        <a href="service-details.html" class="th-btn btn-sm style2 theme-color">Read More</a>
+                        <a href="service-details.html" class="th-btn btn-sm style2 theme-color">Lire Plus</a>
                     </div>
                 </div>
                 <div class="col-xl-3 col-lg-4 col-sm-6">
@@ -164,9 +164,9 @@ Service Area
                         <div class="box-icon">
                             <img src="assets/img/icon/service_card_5.svg" alt="Icon">
                         </div>
-                        <h3 class="box-title"><a href="service-details.html">Gynecologists</a></h3>
+                        <h3 class="box-title"><a href="service-details.html">Gynécologues</a></h3>
                         <p class="box-text">30+ Doctors</p>
-                        <a href="service-details.html" class="th-btn btn-sm style2 theme-color">Read More</a>
+                        <a href="service-details.html" class="th-btn btn-sm style2 theme-color">Lire Plus</a>
                     </div>
                 </div>
                 <div class="col-xl-3 col-lg-4 col-sm-6">
@@ -177,9 +177,9 @@ Service Area
                         <div class="box-icon">
                             <img src="assets/img/icon/service_card_6.svg" alt="Icon">
                         </div>
-                        <h3 class="box-title"><a href="service-details.html">Ophthalmology</a></h3>
+                        <h3 class="box-title"><a href="service-details.html">Ophtalmologie</a></h3>
                         <p class="box-text">24+ Doctors</p>
-                        <a href="service-details.html" class="th-btn btn-sm style2 theme-color">Read More</a>
+                        <a href="service-details.html" class="th-btn btn-sm style2 theme-color">Lire Plus</a>
                     </div>
                 </div>
                 <div class="col-xl-3 col-lg-4 col-sm-6">
@@ -190,9 +190,9 @@ Service Area
                         <div class="box-icon">
                             <img src="assets/img/icon/service_card_7.svg" alt="Icon">
                         </div>
-                        <h3 class="box-title"><a href="service-details.html">Orthopedics</a></h3>
+                        <h3 class="box-title"><a href="service-details.html">Orthopédie</a></h3>
                         <p class="box-text">26+ Doctors</p>
-                        <a href="service-details.html" class="th-btn btn-sm style2 theme-color">Read More</a>
+                        <a href="service-details.html" class="th-btn btn-sm style2 theme-color">Lire Plus</a>
                     </div>
                 </div>
                 <div class="col-xl-3 col-lg-4 col-sm-6">
@@ -203,14 +203,14 @@ Service Area
                         <div class="box-icon">
                             <img src="assets/img/icon/service_card_8.svg" alt="Icon">
                         </div>
-                        <h3 class="box-title"><a href="service-details.html">Cardiology</a></h3>
+                        <h3 class="box-title"><a href="service-details.html">Cardiologie</a></h3>
                         <p class="box-text">20+ Doctors</p>
-                        <a href="service-details.html" class="th-btn btn-sm style2 theme-color">Read More</a>
+                        <a href="service-details.html" class="th-btn btn-sm style2 theme-color">Lire Plus</a>
                     </div>
                 </div>
             </div>
             <div class="mt-5 pt-2 space-extra-bottom">
-                <p class="round-text"><span class="text">You Get Our 20+ More services... <a href="service.html" class="line-btn">Explore All Services</a></span></p>
+                <p class="round-text"><span class="text">Vous bénéficiez de plus de 20 services supplémentaires... <a href="service.html" class="line-btn">Explorez tous les services</a></span></p>
             </div>
         </div>
     </section>
