--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -119,7 +119,7 @@
 							{% endif %}
 
 							<li>
-								<a href="#">Blog</a>
+								<a href="{{ path('app_blog_index')}}">Blog</a>
 
 							</li>
 							<li>
@@ -128,7 +128,7 @@
 										<a href="{{ path('app_patient_edit', {'id': app.user.patient.id}) }}" class="th-btn">{{ app.user.firstname }}</a>
 									{% elseif app.user.secretary %}
 										<a href="{{ path('app_secretary_edit', {'id': app.user.secretary.id}) }}" class="th-btn">{{ app.user.firstname }}</a>
-									{% elseif app.user.doctor %}
+									{% elseif app.user.doctor and app.user.doctor.id %}
 										<a href="{{ path('app_doctor_edit', {'id': app.user.doctor.id}) }}" class="th-btn">{{ app.user.firstname }}</a>
 									{% endif %}
 								{% endif %}
@@ -168,7 +168,7 @@
 
 													</li>
 													<li>
-														<a href="#">Dossier médical</a>
+														<a href="{{ path('app_doctor_index')}}">Dossier médical</a>
 
 													</li>
 													<li>
@@ -188,7 +188,7 @@
 												{% endif %}
 											{% endif %}
 											<li>
-												<a href="#">Blog</a>
+												<a href="{{ path('app_blog_index')}}">Blog</a>
 											</li>
 
 										</ul>
@@ -202,7 +202,7 @@
 												<a href="{{ path('app_patient_edit', {'id': app.user.patient.id}) }}" class="th-btn">{{ app.user.firstname }}</a>
 											{% elseif app.user.secretary %}
 												<a href="{{ path('app_secretary_edit', {'id': app.user.secretary.id}) }}" class="th-btn">{{ app.user.firstname }}</a>
-											{% elseif app.user.doctor %}
+											{% elseif app.user.doctor and app.user.doctor.id %}
 												<a href="{{ path('app_doctor_edit', {'id': app.user.doctor.id}) }}" class="th-btn">{{ app.user.firstname }}</a>
 											{% endif %}
 										{% endif %}
@@ -253,7 +253,7 @@
 							</li>
 
 							<li>
-								<a href="#">Blog</a>
+								<a href="{{ path('app_blog_index')}}">Blog</a>
 
 							</li>
 							<li>
@@ -303,7 +303,7 @@
 											</li>
 
 											<li>
-												<a href="#">Blog</a>
+												<a href="{{ path('app_blog_index')}}">Blog</a>
 
 											</li>
 											<li>
