--- a/templates/blog/index.html.twig
+++ b/templates/blog/index.html.twig
@@ -5,38 +5,38 @@
 
 {% block body %}
 	{# <h1>Blog index</h1>
-	
-		<table class="table">
-			<thead>
-				<tr>
-					<th>Id</th>
-					<th>Title</th>
-					<th>Details</th>
-					<th>CreationDate</th>
-					<th>actions</th>
-				</tr>
-			</thead>
-			<tbody>
-				{% for blog in blogs %}
+		
+			<table class="table">
+				<thead>
 					<tr>
-						<td>{{ blog.id }}</td>
-						<td>{{ blog.title }}</td>
-						<td>{{ blog.details }}</td>
-						<td>{{ blog.creationDate }}</td>
-						<td>
-							<a href="{{ path('app_blog_show', {'id': blog.id}) }}">show</a>
-							<a href="{{ path('app_blog_edit', {'id': blog.id}) }}">edit</a>
-						</td>
+						<th>Id</th>
+						<th>Title</th>
+						<th>Details</th>
+						<th>CreationDate</th>
+						<th>actions</th>
 					</tr>
-				{% else %}
-					<tr>
-						<td colspan="5">no records found</td>
-					</tr>
-				{% endfor %}
-			</tbody>
-		</table>
-	
-		<a href="{{ path('app_blog_new') }}">Create new</a> #}
+				</thead>
+				<tbody>
+					{% for blog in blogs %}
+						<tr>
+							<td>{{ blog.id }}</td>
+							<td>{{ blog.title }}</td>
+							<td>{{ blog.details }}</td>
+							<td>{{ blog.creationDate }}</td>
+							<td>
+								<a href="{{ path('app_blog_show', {'id': blog.id}) }}">show</a>
+								<a href="{{ path('app_blog_edit', {'id': blog.id}) }}">edit</a>
+							</td>
+						</tr>
+					{% else %}
+						<tr>
+							<td colspan="5">no records found</td>
+						</tr>
+					{% endfor %}
+				</tbody>
+			</table>
+		
+			<a href="{{ path('app_blog_new') }}">Create new</a> #}
 
 	<section class="th-blog-wrapper space-top space-extra-bottom">
 		<div class="container">
@@ -44,31 +44,35 @@
 				<div class="col-xxl-8 col-lg-7">
 					{% for blog in blogs %}
 						{# <tr>
-						                            <td>{{ blog.id }}</td>
-						                            <td>{{ blog.title }}</td>
-						                            <td>{{ blog.details }}</td>
-						                            <td>{{ blog.creationDate }}</td>
-						                            <td>
-						                                <a href="{{ path('app_blog_show', {'id': blog.id}) }}">show</a>
-						                                <a href="{{ path('app_blog_edit', {'id': blog.id}) }}">edit</a>
-						                            </td>
-						                        </tr> #}
+												                            <td>{{ blog.id }}</td>
+												                            <td>{{ blog.title }}</td>
+												                            <td>{{ blog.details }}</td>
+												                            <td>{{ blog.creationDate }}</td>
+												                            <td>
+												                                <a href="{{ path('app_blog_show', {'id': blog.id}) }}">show</a>
+												                                <a href="{{ path('app_blog_edit', {'id': blog.id}) }}">edit</a>
+												                            </td>
+												                        </tr> #}
 						<div class="th-blog blog-single">
 							<div class="blog-content">
 								<div class="blog-meta">
-									<a class="author" href="#">
-										<i class="fal fa-user"></i>{{ blog.getDoctor().getUser().firstName}} {{ blog.getDoctor().getUser().lastName}}</a>
-									<a href="#">
-										<i class="fal fa-calendar"></i>{{ blog.creationDate|date('Y-m-d') }}</a>
+									<a class="author" href="{{ path('app_doctor_show', {'id': blog.getDoctor().id}) }}">
+										<i class="fal fa-user"></i>
+										{{ blog.getDoctor().getUser().firstName}}
+										{{ blog.getDoctor().getUser().lastName}}</a>
+									<a>
+										<i class="fal fa-calendar"></i>
+										{{ blog.creationDate|date('F j, Y H:i') }}</a>
+
 
 									{# <a href="blog-details.html">
-										<i class="fal fa-comments"></i>Comments (3)</a> #}
+																			<i class="fal fa-comments"></i>Comments (3)</a> #}
 								</div>
 								<h2 class="blog-title">
-									<a >{{ blog.title }}</a>
+									<a>{{ blog.title }}</a>
 								</h2>
 								<p class="blog-text">{{ blog.details }}</p>
-								<a  class="th-btn btn-sm">Read More</a>
+								<a href="{{ path('app_blog_show', {'id': blog.id}) }}" class="th-btn btn-sm">Read More</a>
 							</div>
 						</div>
 
@@ -110,64 +114,64 @@
 								<li><a href="blog.html">Neurology</a></li>
 							</ul>
 						</div>
-						<div class="widget  ">
-							<h3 class="widget_title">Recent Posts</h3>
-							<div class="recent-post-wrap">
-								<div class="recent-post">
-									<div class="media-img">
-										<a href="blog-details.html"><img src="assets/img/blog/recent-post-1-1.jpg" alt="Blog Image"></a>
-									</div>
-									<div class="media-body">
-										<h4 class="post-title">
-											<a class="text-inherit" href="blog-details.html">How Business Is Taking Over & What to Do About It</a>
-										</h4>
-										<div class="recent-post-meta">
-											<a href="blog.html">
-												<i class="fal fa-calendar"></i>21 Jun, 2024</a>
-										</div>
-									</div>
-								</div>
-								<div class="recent-post">
-									<div class="media-img">
-										<a href="blog-details.html"><img src="assets/img/blog/recent-post-1-2.jpg" alt="Blog Image"></a>
-									</div>
-									<div class="media-body">
-										<h4 class="post-title">
-											<a class="text-inherit" href="blog-details.html">Health vs. Wealth Navigate Business in Medicine</a>
-										</h4>
-										<div class="recent-post-meta">
-											<a href="blog.html">
-												<i class="fal fa-calendar"></i>22 Jun, 2024</a>
-										</div>
-									</div>
-								</div>
-								<div class="recent-post">
-									<div class="media-img">
-										<a href="blog-details.html"><img src="assets/img/blog/recent-post-1-3.jpg" alt="Blog Image"></a>
-									</div>
-									<div class="media-body">
-										<h4 class="post-title">
-											<a class="text-inherit" href="blog-details.html">Preserving Care Strategy Amidst Food Changes</a>
-										</h4>
-										<div class="recent-post-meta">
-											<a href="blog.html">
-												<i class="fal fa-calendar"></i>23 Jun, 2024</a>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="widget widget_tag_cloud  ">
-							<h3 class="widget_title">Popular Tags</h3>
-							<div class="tagcloud">
-								<a href="blog.html">Skin Care</a>
-								<a href="blog.html">Advice</a>
-								<a href="blog.html">Solution</a>
-								<a href="blog.html">Doctors</a>
-								<a href="blog.html">Medical</a>
-								<a href="blog.html">Hospital</a>
-							</div>
-						</div>
+						{# <div class="widget  ">
+													<h3 class="widget_title">Recent Posts</h3>
+													<div class="recent-post-wrap">
+														<div class="recent-post">
+															<div class="media-img">
+																<a href="blog-details.html"><img src="assets/img/blog/recent-post-1-1.jpg" alt="Blog Image"></a>
+															</div>
+															<div class="media-body">
+																<h4 class="post-title">
+																	<a class="text-inherit" href="blog-details.html">How Business Is Taking Over & What to Do About It</a>
+																</h4>
+																<div class="recent-post-meta">
+																	<a href="blog.html">
+																		<i class="fal fa-calendar"></i>21 Jun, 2024</a>
+																</div>
+															</div>
+														</div>
+														<div class="recent-post">
+															<div class="media-img">
+																<a href="blog-details.html"><img src="assets/img/blog/recent-post-1-2.jpg" alt="Blog Image"></a>
+															</div>
+															<div class="media-body">
+																<h4 class="post-title">
+																	<a class="text-inherit" href="blog-details.html">Health vs. Wealth Navigate Business in Medicine</a>
+																</h4>
+																<div class="recent-post-meta">
+																	<a href="blog.html">
+																		<i class="fal fa-calendar"></i>22 Jun, 2024</a>
+																</div>
+															</div>
+														</div>
+														<div class="recent-post">
+															<div class="media-img">
+																<a href="blog-details.html"><img src="assets/img/blog/recent-post-1-3.jpg" alt="Blog Image"></a>
+															</div>
+															<div class="media-body">
+																<h4 class="post-title">
+																	<a class="text-inherit" href="blog-details.html">Preserving Care Strategy Amidst Food Changes</a>
+																</h4>
+																<div class="recent-post-meta">
+																	<a href="blog.html">
+																		<i class="fal fa-calendar"></i>23 Jun, 2024</a>
+																</div>
+															</div>
+														</div>
+													</div>
+												</div>
+												<div class="widget widget_tag_cloud  ">
+													<h3 class="widget_title">Popular Tags</h3>
+													<div class="tagcloud">
+														<a href="blog.html">Skin Care</a>
+														<a href="blog.html">Advice</a>
+														<a href="blog.html">Solution</a>
+														<a href="blog.html">Doctors</a>
+														<a href="blog.html">Medical</a>
+														<a href="blog.html">Hospital</a>
+													</div>
+												</div> #}
 					</aside>
 				</div>
 			</div>
@@ -175,3 +179,4 @@
 	</section>
 
 {% endblock %}
+
