--- a/templates/info/contact.html.twig
+++ b/templates/info/contact.html.twig
@@ -1,6 +1,6 @@
 {% extends "base.html.twig" %}
 {% block body %}
- <!--==============================
+ {# <!--==============================
  Contact Info Area
 ==============================-->
     <div class="space">
@@ -89,14 +89,51 @@
                 </div>
             </div>
         </div>
-    </div> <!--==============================
+    </div>  #}
+    <!--==============================
 Contact Area   
 ==============================-->
+{# 
+<form id="myForm" action="https://api.web3forms.com/submit" method="POST">
+
+							<input type="hidden" name="access_key" value="a084bb5f-6100-45f3-aec0-e0306365a590">
+							<input type="hidden" name="redirect" value="http://alevole.infinityfreeapp.com/">
+							<h6 class="h6 text-capitalize mb-1">Get Your Free Quote</h6>
+							<p>Supporting call-to-action goes here</p>
+							<button type="button" class="close position-absolute" data-dismiss="modal"
+								aria-label="Close">
+								<span aria-hidden="true">&times;</span>
+							</button>
+							<div class="row">
+								<div class="col-12">
+									<input name="name" class="form-control" type="text" placeholder="Your Name" required
+										data-error="NEW ERROR MESSAGE">
+								</div>
+								<div class="col-12">
+									<input name="email" class="form-control" type="email" placeholder="Your Email"
+										required data-error="NEW ERROR MESSAGE">
+								</div>
+								<div class="col-12">
+									<textarea name="message" class="form-control" type="text" placeholder="Your Message" required
+										data-error="NEW ERROR MESSAGE"></textarea>
+								</div>
+							
+								<div class="col-12">
+									<button 
+										class="btn btn-primary py-3 w-100 text-uppercase rounded-pill fwSemibold" type="submit" onclick="handleFormSubmission()">sned
+										your message</button>
+								</div>
+							</div>
+						</form>
+                         #}
+                         <br><br>
     <div class="space-bottom">
         <div class="container">
-            <form action="mail.php" method="POST" class="contact-form ajax-contact" data-bg-src="assets/img/bg/contact_form_bg.png">
+            <form action="https://api.web3forms.com/submit" method="POST" class="contact-form ajax-contact" data-bg-src="assets/img/bg/contact_form_bg.png">
+               							<input type="hidden" name="access_key" value="2eb53aae-45d8-49b4-b3bc-4d3b377d3167">
+							<input type="hidden" name="redirect" value="{{ path('app_homePage') }}">
                 <div class="input-wrap">
-                    <h2 class="sec-title">Get In Touch!</h2>
+                    <h2 class="sec-title">Contactez-nous !</h2>
                     <div class="row">
                         <div class="form-group col-12">
                             <input type="text" class="form-control" name="name" id="name" placeholder="Your Name">
@@ -110,22 +147,13 @@ Contact Area
                             <input type="tel" class="form-control" name="number" id="number" placeholder="Phone Number">
                             <i class="fal fa-phone"></i>
                         </div>
-                        <div class="form-group col-12">
-                            <select name="subject" id="subject" class="form-select">
-                                <option value="" disabled selected hidden>Select Subject</option>
-                                <option value="Make Appointment">Make Appointment</option>
-                                <option value="General Inquiry">General Inquiry</option>
-                                <option value="Medicine Help">Medicine Help</option>
-                                <option value="Consultation">Consultation</option>
-                            </select>
-                            <i class="fal fa-chevron-down"></i>
-                        </div>
+                        
                         <div class="form-group col-12">
                             <textarea name="message" id="message" cols="30" rows="3" class="form-control" placeholder="Type Appointment Note..."></textarea>
                             <i class="fal fa-pencil"></i>
                         </div>
-                        <div class="form-btn col-12">
-                            <button class="th-btn btn-fw">BOOK AN APPOINTMENT</button>
+                        <div class="form-btn col-6">
+                            <button class="th-btn btn-fw">Send</button>
                         </div>
                     </div>
                     <p class="form-messages mb-0 mt-3"></p>
@@ -138,7 +166,7 @@ Map Area
 ==============================-->
     <div class="">
         <div class="contact-map">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3644.7310056272386!2d89.2286059153658!3d24.00527418490799!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39fe9b97badc6151%3A0x30b048c9fb2129bc!2sAngfuztheme!5e0!3m2!1sen!2sbd!4v1651028958211!5m2!1sen!2sbd" allowfullscreen="" loading="lazy"></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d756.6114729376475!2d10.80768797558849!3d35.764953497913886!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x130212a587e3bc31%3A0x2df60524b9d30807!2sSalon%20de%20Th%C3%A9%20ELHABAYEB!5e0!3m2!1sen!2stn!4v1708620551011!5m2!1sen!2stn" allowfullscreen="" loading="lazy"></iframe>
         </div>
     </div>
 {% endblock %}
