--- a/templates/doctor/_form.html.twig
+++ b/templates/doctor/_form.html.twig
@@ -1,4 +1,38 @@
-{{ form_start(form) }}
-    {{ form_widget(form) }}
-    <button class="btn">{{ button_label|default('Save') }}</button>
+	<div class="overflow-hidden space">
+		<div class="container">
+
+{{ form_start(form, {'attr': {'class': 'appointment-form2'}}) }}
+<div class="row justify-content-center text-center">
+				<div class="col-xl-9">
+					<div class="title-area">
+						<h3 class="sec-heading">Doctor</h3>
+					</div>
+				</div>
+			</div>
+			<div class="row justify-content-center">
+				<div class="form-group col-md-6 ">
+                {{ form_row(form.specialty) }}
+				</div>
+                				<div class="form-group col-md-6 ">
+                {{ form_row(form.officePhone) }}
+				</div>
+                				<div class="form-group col-md-6 ">
+                {{ form_row(form.officeRegion) }}
+				</div>
+                				<div class="form-group col-md-6 ">
+                {{ form_row(form.officeAddress) }}
+				</div>
+			</div>
+
+			<br>
+			<div class="row justify-content-center">
+				<div class="form-btn col-2">
+                    <button class="th-btn btn-fw">{{ button_label|default('Sauvegarder') }}</button>
+				</div>
+			</div>
+
+    
+
 {{ form_end(form) }}
+        </div>
+    </div>
