--- a/templates/doctor/edit.html.twig
+++ b/templates/doctor/edit.html.twig
@@ -3,11 +3,10 @@
 {% block title %}Edit Doctor{% endblock %}
 
 {% block body %}
-    <h1>Edit Doctor</h1>
 
     {{ include('doctor/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('app_doctor_index') }}">back to list</a>
+    {# <a href="{{ path('app_doctor_index') }}">back to list</a>
 
-    {{ include('doctor/_delete_form.html.twig') }}
+    {{ include('doctor/_delete_form.html.twig') }} #}
 {% endblock %}
