--- a/templates/info/contact.html.twig
+++ b/templates/info/contact.html.twig
@@ -130,7 +130,7 @@
 		<div class="space-bottom"> <div class="container">
 			<form action="https://api.web3forms.com/submit" method="POST" class="contact-form" data-bg-src="assets/img/bg/contact_form_bg.png">
 				<input type="hidden" name="access_key" value="2eb53aae-45d8-49b4-b3bc-4d3b377d3167">
-				<input type="hidden" name="redirect" value="{{ path('app_thankYouPage') }}">
+				<input type="hidden" name="redirect" value="http://127.0.0.1:8000/thankYouPage">
 				<div class="input-wrap">
 					<h2 class="sec-title">Contactez-nous !</h2>
 					<div class="row">
