--- a/templates/info/thankYouPage.html.twig
+++ b/templates/info/thankYouPage.html.twig
@@ -8,7 +8,7 @@
             <div class="error-content">
                 <h2 class="error-title">OooPs! Page Not Found</h2>
                 <p class="error-text">Oops! The page you are looking for does not exist. It might have been moved or deleted. Please check and try again.</p>
-                <a href="{{path="app_homePage"}}" class="th-btn"><i class="fal fa-home me-2"></i>Retour à l'accueil</a>
+                <a href="{{ path('app_homePage')}}" class="th-btn"><i class="fal fa-home me-2"></i>Retour à l'accueil</a>
             </div>
         </div>
     </section>
