--- a/templates/patient/_form.html.twig
+++ b/templates/patient/_form.html.twig
@@ -1,12 +1,29 @@
-{# {{ form_start(form) }}
-    {{ form_widget(form) }}
-    <button class="btn">{{ button_label|default('Save') }}</button>
-{{ form_end(form) }} #}
+<div class="overflow-hidden space">
+	<div class="container">
 
-{{ form_start(form, {'attr': {'class': 'appointment-form2'}}) }}
-                <h4 class="form-title">Complétez votre enregistrement</h4>
+		{{ form_start(form, {'attr': {'class': 'appointment-form2'}}) }}
+		<div class="row justify-content-center text-center">
+			<div class="col-xl-9">
+				<div class="title-area">
+					<h3 class="sec-heading">Patient</h3>
+				</div>
+			</div>
+		</div>
+		<div class="row justify-content-center">
 
-            {{ form_row(form.region, {'attr': {'class': 'form-select'}}) }}
-            <br>
-    <button class="th-btn btn-fw">{{ button_label|default('Save') }}</button>
-{{ form_end(form) }}
+			<div class="form-group col-md-6 ">
+				{{ form_row(form.region, {'attr': {'class': 'form-select'}}) }}
+			</div>
+
+
+			<br>
+			<div class="row justify-content-center">
+				<div class="form-btn col-2">
+					<button class="th-btn btn-fw">{{ button_label|default('Sauvegarder') }}</button>
+				</div>
+			</div>
+
+
+			{{ form_end(form) }}
+		</div>
+	</div>
