--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -20,32 +20,33 @@
 				</div>
 			</div>
 			<div class="row">
+
 				<div class="form-group col-md-6">
+
 					{{ form_row(registrationForm.roles) }}
+
+				</div>
+
+				<div class="form-group col-md-6">                                       
+					{{ form_row(registrationForm.gender, {label: 'Genre'}) }}
+				</div>
+				<div class="form-group col-md-6">
+					{{ form_row(registrationForm.email, {label: 'Email'}) }}
+				</div>
+				<div class="form-group col-md-6">
+					{{ form_row(registrationForm.plainPassword, {label: 'Password'}) }}
 				</div>
 				<div class="form-group col-md-6">
 
-					{{ form_row(registrationForm.gender) }}
-				</div>
-				<div class="form-group col-md-6">
-					{{ form_row(registrationForm.email) }}
-				</div>
-				<div class="form-group col-md-6">
-					{{ form_row(registrationForm.plainPassword, {
-            label: 'Password'
-        }) }}
+					{{ form_row(registrationForm.firstName, {label: 'Prénom'}) }}
 				</div>
 				<div class="form-group col-md-6">
 
-					{{ form_row(registrationForm.firstName) }}
+					{{ form_row(registrationForm.lastName, {label: 'Nom'}) }}
 				</div>
 				<div class="form-group col-md-6">
 
-					{{ form_row(registrationForm.lastName) }}
-				</div>
-				<div class="form-group col-md-6">
-
-					{{ form_row(registrationForm.phone) }}
+					{{ form_row(registrationForm.phone, {label: 'Téléphone'}) }}
 				</div>
 
 				<div class="form-group col-md-6">
