FrontEnd Admin Doctor Side Management

--- a/templates/doctor/show.html.twig
+++ b/templates/doctor/show.html.twig
@@ -1,38 +1,28 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Doctor{% endblock %}
+{% block title %}Doctor index{% endblock %}
 
 {% block body %}
-    <h1>Doctor</h1>
-
-    <table class="table">
+<div class="space">
+    <table class="cart_table woocommerce-cart-form">
+        <thead>
+            <tr>
+                <th class="cart-col-Nom">Id</th>
+                <th class="cart-col-Region">Specialty</th>
+                <th class="cart-col-phone">OfficeRegion</th>
+                <th class="cart-col-consultaion">OfficeAddress</th>
+                <th class="cart-col-Action">OfficePhone</th>
+            </tr>
+        </thead>
         <tbody>
             <tr>
-                <th>Id</th>
                 <td>{{ doctor.id }}</td>
-            </tr>
-            <tr>
-                <th>Specialty</th>
                 <td>{{ doctor.specialty }}</td>
-            </tr>
-            <tr>
-                <th>OfficeRegion</th>
                 <td>{{ doctor.officeRegion }}</td>
-            </tr>
-            <tr>
-                <th>OfficeAddress</th>
                 <td>{{ doctor.officeAddress }}</td>
-            </tr>
-            <tr>
-                <th>OfficePhone</th>
                 <td>{{ doctor.officePhone }}</td>
             </tr>
         </tbody>
     </table>
-
-    <a href="{{ path('app_doctor_index') }}">back to list</a>
-
-    <a href="{{ path('app_doctor_edit', {'id': doctor.id}) }}">edit</a>
-
-    {{ include('doctor/_delete_form.html.twig') }}
+</div>
 {% endblock %}
