--- a/templates/doctor/index.html.twig
+++ b/templates/doctor/index.html.twig
@@ -3,21 +3,21 @@
 {% block title %}Doctor index{% endblock %}
 
 {% block body %}
-    <h1>Doctor index</h1>
-
-    <table class="table">
+<div class="container">
+    <h1>Liste des médecins</h1>
+    <table class="table table-bordered">
         <thead>
             <tr>
-                <th>Id</th>
-                <th>Specialty</th>
-                <th>OfficeRegion</th>
-                <th>OfficeAddress</th>
-                <th>OfficePhone</th>
-                <th>actions</th>
+                <th scope="col">ID</th>
+                <th scope="col">Spécialité</th>
+                <th scope="col">Région du cabinet</th>
+                <th scope="col">Adresse du cabinet</th>
+                <th scope="col">Téléphone du cabinet</th>
+                <th scope="col">Actions</th>
             </tr>
         </thead>
         <tbody>
-        {% for doctor in doctors %}
+            {% for doctor in doctors %}
             <tr>
                 <td>{{ doctor.id }}</td>
                 <td>{{ doctor.specialty }}</td>
@@ -25,17 +25,18 @@
                 <td>{{ doctor.officeAddress }}</td>
                 <td>{{ doctor.officePhone }}</td>
                 <td>
-                    <a href="{{ path('app_doctor_show', {'id': doctor.id}) }}">show</a>
-                    <a href="{{ path('app_doctor_edit', {'id': doctor.id}) }}">edit</a>
+                    <a href="{{ path('app_doctor_show', {'id': doctor.id}) }}" class="btn btn-primary">Voir</a>
+                    <a href="{{ path('app_doctor_edit', {'id': doctor.id}) }}" class="btn btn-warning">Modifier</a>
                 </td>
             </tr>
-        {% else %}
+            {% else %}
             <tr>
-                <td colspan="6">no records found</td>
+                <td colspan="6">Aucun enregistrement trouvé</td>
             </tr>
-        {% endfor %}
+            {% endfor %}
         </tbody>
     </table>
 
-    <a href="{{ path('app_doctor_new') }}">Create new</a>
+    <a href="{{ path('app_doctor_new') }}" class="btn btn-success">Ajouter un médecin</a>
+</div>
 {% endblock %}
